# easytrajh5

./: README.md  pyproject.toml  setup.py
easytrajh5/: cli.py  fs.py  h5.py  manager.py  select.py  struct.py  traj.py
test/: aaa-dry.parmed  aaa_trajectory.h5  aaa_trajectory_j.h5  foamid-ZQL24-frame-0.fasta  test_easytraj.py  test_fs.py  test_h5.py  test_select.py  test_yaml.py
