[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "easytrajh5"
authors = [{name = "Bosco Ho", email = "apposite@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1"
dependencies = [
  "addict",
  "deepdiff",
  "h5py",
  "mdtraj",
  "numpy",
  "orjson",
  "ParmEd",
  "pydash",
  "rich",
  "ruyaml"
]

[project.urls]
Home = "https://github.com/boscoh/easytrajh5"

